erDiagram
    contacts ||--o{ threads : "sender_email"
    threads ||--o{ emails : "id"
    emails ||--o| processing_jobs : "id"
    emails ||--o{ actions : "id"
    emails ||--o{ drafts : "id"

    contacts {
        int id PK
        string email UK
        string name
        string company
        string status
        decimal account_value
        decimal churn_risk_score
        datetime created_at
        datetime last_contact_at
    }

    threads {
        int id PK
        string thread_id UK
        text subject
        string sender_email FK
        datetime first_seen_at
        datetime last_updated_at
        string status
        string assigned_to
    }

    emails {
        int id PK
        int thread_id FK
        string message_id UK
        string sender
        text subject
        text body
        datetime timestamp
        decimal sentiment_score
        string category
        string urgency
        boolean requires_human
        decimal confidence
        jsonb raw_entities
        string status
    }

    processing_jobs {
        int id PK
        int email_id FK
        string status
        text error_message
        datetime created_at
        datetime completed_at
    }

    actions {
        int id PK
        int email_id FK
        jsonb agent_reasoning_log
        string action_type
        text proposed_content
        boolean is_approved
        string approved_by
        datetime executed_at
    }

    drafts {
        int id PK
        int email_id FK
        text content
        string status
        datetime created_at
        datetime approved_at
    }

    knowledge_chunks {
        int id PK
        string source_doc
        text chunk_text
        vector embedding "Vector Field"
        datetime created_at
    }

    web_intelligence_cache {
        int id PK
        text source_url
        string target_entity
        jsonb scraped_data
        datetime scraped_at
        datetime expires_at
    }

    audit_log {
        int id PK
        string entity_type
        int entity_id
        string action
        string performed_by
        datetime timestamp
        jsonb diff
    }
